# raytracer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  launch.sh  output.ppm
include/: canvas.h  launch.h  raymath.h
libs/raytracer/: Cargo.toml
libs/raytracer/src/: camera.rs  colour.rs  config.rs  hittable.rs  interval.rs  lib.rs  material.rs  point.rs  ray.rs  scene.rs  vector.rs
libs/raytracer/src/scene/: base_scene.rs  mod.rs
libs/simulation/: Cargo.toml
libs/simulation/benches/: bench_png.rs  bench_ppm.rs
libs/simulation/src/: lib.rs  main.rs  png.rs  ppm.rs  scene.rs  sphere.rs  world.rs
src/: canvas.cpp  launch.cpp  main.cpp  raymath.cpp
test/: test_canvas.cpp  test_raymath.cpp
