[package]
name = "lib-raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
thiserror = "1.0"
#rayon = "1.8"

[dev-dependencies]
rstest = "0.18.2"
rand_chacha = "0.3.1"
criterion = { version = "0.3", features = ["html_reports"] }

#[[bench]]
#name = "bench_*"
#harness = false # disable rustc harness for criterion